bzip2ida/c2/uncompress
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2263:18: error: expected expression
v36 = *( _OWORD *)&v30[v34 + 16]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2263:10: error: use of undeclared identifier '_OWORD'
v36 = *( _OWORD *)&v30[v34 + 16]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2264:12: error: expected expression
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2264:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2264:39: error: expected expression
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
                                      ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2264:31: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
                              ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2265:12: error: expected expression
*( _OWORD *)&unused[v34 + 16] = v36; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2265:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 16] = v36; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2266:18: error: expected expression
v37 = *( _OWORD *)&v30[v34 + 48]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2266:10: error: use of undeclared identifier '_OWORD'
v37 = *( _OWORD *)&v30[v34 + 48]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2267:12: error: expected expression
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2267:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2267:44: error: expected expression
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2267:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2268:12: error: expected expression
*( _OWORD *)&unused[v34 + 48] = v37; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2268:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 48] = v37; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2269:18: error: expected expression
v38 = *( _OWORD *)&v30[v34 + 80]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2269:10: error: use of undeclared identifier '_OWORD'
v38 = *( _OWORD *)&v30[v34 + 80]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2270:12: error: expected expression
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2270:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2270:44: error: expected expression
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2270:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2271:12: error: expected expression
*( _OWORD *)&unused[v34 + 80] = v38; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2271:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 80] = v38; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2272:18: error: expected expression
v39 = *( _OWORD *)&v30[v34 + 112]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2272:10: error: use of undeclared identifier '_OWORD'
v39 = *( _OWORD *)&v30[v34 + 112]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2273:12: error: expected expression
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2273:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2273:44: error: expected expression
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2273:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2274:12: error: expected expression
*( _OWORD *)&unused[v34 + 112] = v39; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2274:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 112] = v39; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2290:18: error: expected expression
v42 = *( _OWORD *)&v30[v40]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2290:10: error: use of undeclared identifier '_OWORD'
v42 = *( _OWORD *)&v30[v40]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2291:12: error: expected expression
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2291:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2291:74: error: expected expression
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
                                                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2291:66: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
                                                                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2292:12: error: expected expression
*( _OWORD *)&unused[v40] = v42; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/bzip2.c:2292:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v40] = v42; 
   ^
40 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/uncompress/src/obj/bzip2.o] Error 1
